--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 asgiref==3.6.0
+beautifulsoup4==4.12.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 defusedxml==0.7.1
 Django==3.2.18
 django-allauth==0.41.0
+django-crispy-forms==1.14.0
+django-livereload-server==0.4
+django-polymorphic==3.1.0
 idna==3.4
 oauthlib==3.2.2
+Pillow==9.5.0
 pycodestyle==2.10.0
 python3-openid==3.2.0
 pytz==2023.3
 requests==2.29.0
 requests-oauthlib==1.3.1
+six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.4
+tornado==6.3.1
 urllib3==1.26.15
