--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.1.0
 defusedxml==0.7.1
 Django==3.2.18
 django-allauth==0.41.0
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-livereload-server==0.4
 django-polymorphic==3.1.0
@@ -12,6 +13,7 @@ idna==3.4
 oauthlib==3.2.2
 Pillow==9.5.0
 pycodestyle==2.10.0
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 requests==2.29.0
@@ -19,5 +21,6 @@ requests-oauthlib==1.3.1
 six==1.16.0
 soupsieve==2.4.1
 sqlparse==0.4.4
+stripe==5.4.0
 tornado==6.3.1
 urllib3==1.26.15
