--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.1.0
 defusedxml==0.7.1
 Django==3.2.18
 django-allauth==0.41.0
+django-bootstrap-datepicker-plus==5.0.3
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-livereload-server==0.4
@@ -13,6 +14,7 @@ idna==3.4
 oauthlib==3.2.2
 Pillow==9.5.0
 pycodestyle==2.10.0
+pydantic==1.10.7
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
@@ -23,4 +25,5 @@ soupsieve==2.4.1
 sqlparse==0.4.4
 stripe==5.4.0
 tornado==6.3.1
+typing_extensions==4.5.0
 urllib3==1.26.15
