--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-bootstrap-datepicker-plus==5.0.3
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-livereload-server==0.4
+django-mathfilters==1.0.0
 django-polymorphic==3.1.0
 idna==3.4
 oauthlib==3.2.2
