--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.12.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==3.2.18
 django-allauth==0.41.0
 django-bootstrap-datepicker-plus==5.0.3
@@ -11,9 +12,11 @@ django-crispy-forms==1.14.0
 django-livereload-server==0.4
 django-mathfilters==1.0.0
 django-polymorphic==3.1.0
+gunicorn==20.1.0
 idna==3.4
 oauthlib==3.2.2
 Pillow==9.5.0
+psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 pydantic==1.10.7
 python-dotenv==1.0.0
